--- a/src/main/resources/templates/admin/servers.html
+++ b/src/main/resources/templates/admin/servers.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragments/head :: commonHead}">
     <title>서버 관리</title>
     <link rel="stylesheet" href="/css/admin.css" />
 </head>
 <body>
+<div th:replace="~{fragments/header :: commonHeader}"></div>
     <h1>서버 관리</h1>
 
     <form method="post" action="/admin/servers/add">
