--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -35,7 +35,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 20 20">
                     <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 01.8 1.6l-4.6 6.1V16a1 1 0 01-1.447.894l-2-1A1 1 0 018 15v-3.3L3.2 5.6A1 1 0 013 5z" clip-rule="evenodd"/>
                 </svg>
-                <span>Filter</span>
+                <span>Filter 적용</span>
             </button>
         </form>
 
