--- a/src/main/resources/templates/admin/assetBundle.html
+++ b/src/main/resources/templates/admin/assetBundle.html
@@ -2,117 +2,119 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: commonHead}">
     <title>AssetBundle 관리</title>
-    <link rel="stylesheet" th:href="@{/css/admin.css}" />
-    <link rel="stylesheet" th:href="@{/css/items.css}"> <!-- items.css 추가 -->
     <script th:src="@{/js/admin.js}"></script>
 	<script th:src="@{/js/assetBundle.js}"></script>
 </head>
+<link rel="stylesheet" th:href="@{/css/admin.css}" />
+
 <body>
 <div th:replace="~{fragments/header :: commonHeader}"></div>
 
-<div class="container">
-    <div class="title-section">
-        <h2>AssetBundle 관리 페이지</h2>
-        <p>업로드된 AssetBundle을 관리합니다.</p>
-    </div>
+<div class="main-content">
+    <div class="container">
+        <div class="title-section">
+            <h2>AssetBundle 관리 페이지</h2>
+            <p>업로드된 AssetBundle을 관리합니다.</p>
+        </div>
 
-    <div class="item-card">
-        <h3>AssetBundle 목록</h3>
-        <form method="post" th:action="@{/api/assetbundles/deleteSelected}">
-            <table class="data-table">
-                <thead>
-                    <tr>
-                        <th><input type="checkbox" onclick="toggleAll(this)" /></th>
-                        <th>ID</th>
-                        <th>번들 이름</th>
-                        <th>파일 경로-윈도우</th>
-                        <th>파일 경로-안드로이드</th>
-                        <th>번들 타이틀</th>
-                        <th>번들 설명</th>
-                        <th>업로드 시간</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="bundle : ${assetBundles}">
-                        <td><input type="checkbox" name="bundleIds" th:value="${bundle.id}" /></td>
-                        <td th:text="${bundle.id}"></td>
-                        <td th:text="${bundle.bundleName}"></td>
-                        <td th:text="${bundle.filePath[0]}"></td>
-                        <td th:text="${bundle.filePath[1]}"></td>
-                        <td th:text="${bundle.bundleTitle}"></td>
-                        <td th:text="${bundle.bundleDescription}"></td>
-                        <td th:text="${bundle.uploadedAt}"></td>
-                    </tr>
-                </tbody>
-            </table>
-            <button type="submit" class="button-primary">선택 삭제</button>
-        </form>
-    </div>
+        <div class="item-card">
+            <h3>AssetBundle 목록</h3>
+            <form method="post" th:action="@{/api/assetbundles/deleteSelected}">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th><input type="checkbox" onclick="toggleAll(this)" /></th>
+                            <th>ID</th>
+                            <th>번들 이름</th>
+                            <th>파일 경로-윈도우</th>
+                            <th>파일 경로-안드로이드</th>
+                            <th>번들 타이틀</th>
+                            <th>번들 설명</th>
+                            <th>업로드 시간</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="bundle : ${assetBundles}">
+                            <td><input type="checkbox" name="bundleIds" th:value="${bundle.id}" /></td>
+                            <td th:text="${bundle.id}"></td>
+                            <td th:text="${bundle.bundleName}"></td>
+                            <td th:text="${bundle.filePath[0]}"></td>
+                            <td th:text="${bundle.filePath[1]}"></td>
+                            <td th:text="${bundle.bundleTitle}"></td>
+                            <td th:text="${bundle.bundleDescription}"></td>
+                            <td th:text="${bundle.uploadedAt}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button type="submit" class="button-primary">선택 삭제</button>
+            </form>
+        </div>
 
-    <div class="item-card">
-        <h3>AppID 목록</h3>
-        <table class="data-table">
-            <thead>
-                <tr>
-                    <th>선택</th>
-                    <th>ID</th>
-                    <th>AppID</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="list : ${appidList}">
-                    <td>
-                        <input type="radio" name="appIds" th:value="${list.num}" />
-                    </td>
-                    <td th:text="${list.num}"></td>
-                    <td th:text="${list.appid}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-		
-    <div class="item-card">
-        <h3>서버 실행</h3>
-        <form method="post" th:action="@{/api/assetbundles/findSelectedWithServer}">    
-            <div id="selectedBundles"></div> <!-- 체크된 항목을 여기에 복사 -->
-            <div id="selectedAppid"></div> <!-- 체크된 항목을 여기에 복사 -->
-            <div class="form-group">
-                <label for="serverParam">서버 파라미터:</label>
-                <input type="text" id="serverParam" name="serverParam" th:value="${params}"  />
-            </div>
-            <button type="submit" onclick="return copySelectedBundles()" class="button-primary">서버 실행</button>
-        </form>
-    </div>
-
-    <div class="item-card">
-        <h3>실행 중인 서버 목록</h3>
-        <form method="post" th:action="@{/api/assetbundles/killServer}" >
+        <div class="item-card">
+            <h3>AppID 목록</h3>
             <table class="data-table">
                 <thead>
                     <tr>
                         <th>선택</th>
-                        <th>방 이름</th>
-                        <th>사용자</th>
-                        <th>모드</th>
-                        <th>씬 이름</th>
-                        <th>시작 시간</th>
-                        <th>앱아이디</th>
+                        <th>ID</th>
+                        <th>AppID</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="server : ${serversJson}">
-                        <td><input type="checkbox" name="serverIds" th:value="${server.appid}+'/'+${server.room}"/></td>
-                        <td th:text="${server.room}"></td>
-                        <td th:text="${server.username}"></td>
-                        <td th:text="${server.mode}"></td>
-                        <td th:text="${server.scenename}"></td>
-                        <td th:text="${server.startedAt}"></td>
-                        <td th:text="${server.appid}"></td>
+                    <tr th:each="list : ${appidList}">
+                        <td>
+                            <input type="radio" name="appIds" th:value="${list.num}" />
+                        </td>
+                        <td th:text="${list.num}"></td>
+                        <td th:text="${list.appid}"></td>
                     </tr>
                 </tbody>
             </table>
-            <button type="submit" onclick="return confirmKill()" class="button-danger">서버 종료</button>
-        </form>
+        </div>
+            
+        <div class="item-card">
+            <h3>서버 실행</h3>
+            <form method="post" th:action="@{/api/assetbundles/findSelectedWithServer}">    
+                <div id="selectedBundles"></div> <!-- 체크된 항목을 여기에 복사 -->
+                <div id="selectedAppid"></div> <!-- 체크된 항목을 여기에 복사 -->
+                <div class="form-group">
+                    <label for="serverParam">서버 파라미터:</label>
+                    <input type="text" id="serverParam" name="serverParam" th:value="${params}"  />
+                </div>
+                <button type="submit" onclick="return copySelectedBundles()" class="button-primary">서버 실행</button>
+            </form>
+        </div>
+
+        <div class="item-card">
+            <h3>실행 중인 서버 목록</h3>
+            <form method="post" th:action="@{/api/assetbundles/killServer}" >
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>선택</th>
+                            <th>방 이름</th>
+                            <th>사용자</th>
+                            <th>모드</th>
+                            <th>씬 이름</th>
+                            <th>시작 시간</th>
+                            <th>앱아이디</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="server : ${serversJson}">
+                            <td><input type="checkbox" name="serverIds" th:value="${server.appid}+'/'+${server.room}"/></td>
+                            <td th:text="${server.room}"></td>
+                            <td th:text="${server.username}"></td>
+                            <td th:text="${server.mode}"></td>
+                            <td th:text="${server.scenename}"></td>
+                            <td th:text="${server.startedAt}"></td>
+                            <td th:text="${server.appid}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button type="submit" onclick="return confirmKill()" class="button-danger">서버 종료</button>
+            </form>
+        </div>
     </div>
 </div>
 </body>
