--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,10 +16,10 @@
 
                     <!-- 관리자에게만 보이는 메뉴 -->
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a th:href="@{/api/assetbundles/bundleList}">Bundle 관리</a>
+                        <a th:href="@{/api/assetbundles/bundleList}">Bundle 목록 및 서버 관리</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a th:href="@{/admin/uploadBundleDesc}">번들 등록 (설명 포함)</a>
+                        <a th:href="@{/admin/uploadBundleDesc}">번들 등록</a>
                     </li>
                 </ul>
             </nav>
