--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,11 +13,14 @@
                     <li sec:authorize="isAuthenticated()">
                         <a th:href="@{/api/items}">아이템</a>
                     </li>
-
+                    <li sec:authorize="isAuthenticated()">
+                        <a th:href="@{/api/assetbundles/bundleListOnly}">Bundle목록</a>
+                    </li>
                     <!-- 관리자에게만 보이는 메뉴 -->
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a th:href="@{/api/assetbundles/bundleList}">Bundle 목록 및 서버 관리</a>
+                        <a th:href="@{/api/assetbundles/bundleList}">Bundle서버 관리</a>
                     </li>
+
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
                         <a th:href="@{/admin/uploadBundleDesc}">번들 등록</a>
                     </li>
